# astrixa-lang

./: .gitignore  AI_COMPLETE_GUIDE.md  AI_IMPLEMENTATION_SUMMARY.md  CLEANUP_CHECKLIST.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.txt  COMPILER_COMPLETE_STRUCTURE.md  COMPILER_PIPELINE_COMPLETE.md  COMPILER_TEST_GUIDE.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  DELETE_UNNECESSARY_DOCS.md  DOCUMENTATION_INDEX.md  ECOSYSTEM_STRATEGY.md  FILE_MANIFEST.md  GOVERNANCE.md  GOVERNANCE_COMPLETE.md  IDE_SUPPORT_COMPLETE.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  LANGUAGE_CORE_FIXES.md  LAUNCH_GUIDE.md  LICENSE  LSP_COMPLETE.md  LSP_IMPLEMENTATION_SUMMARY.md  LSP_INDEX.md  PACKAGE_MANAGER.md  PACKAGE_MANAGER_COMPLETE.md  PACKAGE_MANAGER_IMPLEMENTATION.md  PACKAGE_MANAGER_INDEX.md  PACKAGE_MANAGER_SUMMARY.md  PACKAGE_MANAGER_TUTORIAL.md  PACKAGE_MANAGER_USAGE.md  PUSH_INSTRUCTIONS.md  READINESS_ASSESSMENT.md  README.md  RELEASE_COMPLETE.md  ROADMAP.md  SECURITY.md  START_HERE.md  (+85 more)
astrixa-cli/: Cargo.toml
astrixa-cli/src/: config.rs  main.rs  templates.rs
astrixa-cli/src/commands/: add.rs  mod.rs  (+3 more)
compiler/: Cargo.toml  STEP_34_README.md
compiler/examples/: error_demo.rs  runtime_test.rs
compiler/src/: ai_runtime.rs  ast.rs  bytecode.rs  compiler.rs  diagnostics.rs  error.rs  gas.rs  interpreter.rs  ir.rs  lexer.rs  lib.rs  loader.rs  lowering.rs  main.rs  optimize.rs  package_manager.rs  parser.rs  stdlib.rs  token.rs  typechecker.rs  types.rs  vm.rs  wasm.rs
lsp/: Cargo.toml  LSP_GUIDE.md  README.md
lsp/src/: completion.rs  diagnostics.rs  hover.rs  main.rs  symbols.rs
(+112 files in other folders)
