[package]
name = "astrixa-cli"
version = "0.1.0"
edition = "2021"
description = "ASTRIXA Language Toolchain - Project manager, builder, and package manager"
authors = ["ASTRIXA Team"]
license = "MIT"

[[bin]]
name = "astrixa"
path = "src/main.rs"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
colored = "2.0"
clap = { version = "4.4", features = ["derive"] }

[dependencies.astrixa-compiler]
path = "../compiler"
package = "astrixa"
