[package]
name = "astrixa"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "astrixa"
path = "src/main.rs"

[[bin]]
name = "compile_modules"
path = "src/bin/compile_modules.rs"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
sha2 = "0.10"
dirs = "5.0"
walkdir = "2.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
