[package]
name = "astrixa-lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "astrixa-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lsp-types = "0.95"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
